feat: add ex. Component Composition 01

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.welcome {
-    background-color: lightcoral;
-    border: solid 2px indianred;
+.container {
+    background-color: white;
+    border: solid 2px red;
 }
